--- a/style.css
+++ b/style.css
@@ -43,8 +43,6 @@ body {
   --logo-color-2: #ffd876;
 
   --border-radius: 2rem;
-
-  --checkmark-animation-time: 500ms;
 }
 
 p {
@@ -85,22 +83,12 @@ li {
   letter-spacing: -0.5px;
 }
 
-.gradient {
-  background: linear-gradient(90deg, var(--neutral-500), var(--neutral-600));
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
 .container {
   max-width: 1300px;
   height: 100vh;
   padding-block: 4rem;
   margin-inline: 11.6rem;
-}
 
-.apple-grid {
-  height: 100%;
   display: grid;
   place-content: center;
   gap: 1rem;
@@ -115,6 +103,9 @@ li {
     'profile profile projects mail mail'
     'profile profile projects select-mode contact'
     'resume resume projects select-mode contact';
+}
+
+.apple-grid {
 }
 
 .brand {
@@ -154,27 +145,27 @@ li {
   height: 14rem;
   background-color: var(--neutral-800);
   border-radius: 50%;
-  background-image: url(./assets/me.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: url(./assets/me.png) no-repeat center/cover;
 }
 .profile .profile-name h2 {
   font-size: 2.4rem;
   padding-top: 1.2rem;
   font-weight: 500;
   color: var(--neutral-700);
+  letter-spacing: -0.5px;
 }
 .profile .profile-name h3 {
   font-size: 1.6rem;
   color: var(--neutral-400);
   font-weight: 400;
   text-align: center;
+  letter-spacing: -0.5px;
 }
 .profile .profile-about p {
   font-size: 1.6rem;
   color: var(--neutral-400);
-  padding-top: 2.8rem;
+  padding-top: 2rem;
+  font-weight: 400;
 }
 .resume {
   grid-area: resume;
@@ -234,8 +225,12 @@ li {
   border-radius: 0 0 1.5rem 1.5rem;
   align-items: center;
   justify-content: center;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: var(--neutral-400);
   position: relative;
+  transition: all 1s ease;
 }
 
 .button-copy:hover {
@@ -256,7 +251,7 @@ li {
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 4px;
-  animation: checkmark var(--checkmark-animation-time) forwards;
+  animation: checkmark 800ms forwards;
 
   position: absolute;
   bottom: 2rem;
@@ -332,7 +327,7 @@ li {
   font-style: normal;
   font-weight: 700;
   line-height: 0.9;
-  background: linear-gradient(90deg, #757b8f 15.77%, #d2d2d2 100%);
+  background: linear-gradient(90deg, #ff719a 15.77%, #ffe29f 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -406,10 +401,10 @@ li {
 .stacks .description p {
   color: var(--neutral-100);
   font-size: 1.2rem;
-  font-weight: 300;
+  font-weight: 400;
 
   background-color: var(--neutral-400);
-  border-radius: 50px;
+  border-radius: 0.9rem;
   padding: 0.8rem;
 }
 
@@ -469,32 +464,38 @@ li {
   align-items: center;
   border: 2px dashed var(--violet-grad);
   overflow: hidden;
-
+  transition: all 1s ease;
   border-radius: 20px;
-  background: linear-gradient(180deg, #6c99df 45.37%, #ffd876 100%);
+  background: #6c99df;
+
   position: relative;
 }
 
 .select-mode.mode {
   border-radius: 20px;
-  background: linear-gradient(180deg, #0c141f 51.56%, #91d4fa 100%);
+  background: #0c141f;
+}
+
+input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
 }
 
 .moon {
   display: none;
-
   position: absolute;
   top: 8rem;
   animation: moonshine 1s ease-out;
-  animation-fill-mode: forwards;
+  transition: all 1s ease;
 }
 
 .select-mode .sun {
   display: block;
   position: absolute;
-  top: 8rem;
+  top: 7.5rem;
   animation: sunrise 1s ease-out;
-  animation-fill-mode: forwards;
 }
 
 @keyframes sunrise {
@@ -503,12 +504,8 @@ li {
     opacity: 0;
   }
   100% {
-    top: 8rem;
+    top: 7.5rem;
     opacity: 1;
-  }
-  0% {
-    top: 20rem;
-    opacity: 0;
   }
 }
 
@@ -529,6 +526,7 @@ li {
 
 .select-mode .avatar {
   perspective: 1000px;
+  z-index: 999;
 }
 
 .memoji-face {
@@ -564,7 +562,6 @@ li {
 
 .select-mode .avatar img {
   width: 100%;
-
   transition: all 1s;
 }
 
@@ -653,19 +650,6 @@ li {
   position: absolute;
 }
 
-/* .contact .frame .title {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.5rem 1.5rem;
-  color: var(--neutral);
-  font-size: 1rem;
-  font-weight: 700;
-} */
-
-/* .contact .frame .title span:nth-child(1) {
-  color: var(--auxiliary-500);
-} */
-
 .contact .button {
   border: none;
   color: var(--neutral);
@@ -724,19 +708,17 @@ li {
 
 /*-------------------- MOBILE DEVICES --------------------*/
 
-@media (min-width: 992px) and (max-width: 1024px) {
+@media (max-width: 820px) {
   .container {
-    margin-inline: 2rem;
-  }
-  .contact .contacts-card {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 1rem;
+    max-height: 1300px;
+    height: 100vh;
+    padding-block: 0.5rem;
+    margin: 0 auto;
   }
 }
 
 /*-------------------- LARGEST DISPLAY --------------------*/
-@media (min-width: 1600px) {
+@media (max-width: 520px) {
   .container {
     margin: auto;
   }
