--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ li {
 .card {
   background-color: var(--neutral-100);
   border-radius: var(--border-radius);
-  /* box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08); */
 }
 
 .title {
@@ -78,22 +77,23 @@ li {
   margin: 0 auto;
   display: grid;
   place-content: center;
-  gap: 1rem;
-  grid-template-columns: 0.5fr 1fr 2.2fr 0.6fr 0.9fr;
-  grid-template-rows: 0.7fr 1.2fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
+  gap: 0.8rem;
+  grid-template-columns: 0.5fr 1fr 0.5fr 2.2fr 0.6fr 0.9fr;
+  grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
   grid-auto-flow: row;
   grid-template-areas:
-    'brand welcome hello stacks stacks'
-    'profile profile hello stacks stacks'
-    'profile profile projects stacks stacks'
-    'profile profile projects mail mail'
-    'profile profile projects mail mail'
-    'profile profile projects select-mode contact'
-    'resume resume projects select-mode contact';
+    'profile profile brand hello stacks stacks'
+    'profile profile welcome hello stacks stacks'
+    'profile profile projects projects stacks stacks'
+    'profile profile projects projects mail mail'
+    'profile profile projects projects mail mail'
+    'profile profile projects projects select-mode contact'
+    'resume resume projects projects select-mode contact';
 }
 
 .brand {
   grid-area: brand;
+  overflow: hidden;
 }
 
 .brand-logo {
@@ -101,26 +101,65 @@ li {
   justify-content: center;
 }
 .brand-logo img {
-  height: 6rem;
+  height: 7.5rem;
+
+  filter: drop-shadow(
+      0px 2.9067351818084717px 2.325388193130493px rgba(0, 0, 0, 0.02)
+    )
+    drop-shadow(0px 6.985288619995117px 5.588231086730957px rgba(0, 0, 0, 0.03))
+    drop-shadow(
+      0px 13.152678489685059px 10.52214241027832px rgba(0, 0, 0, 0.04)
+    )
+    drop-shadow(
+      0px 23.46213150024414px 18.769704818725586px rgba(0, 0, 0, 0.04)
+    )
+    drop-shadow(
+      0px 43.883338928222656px 35.10667037963867px rgba(0, 0, 0, 0.05)
+    )
+    drop-shadow(
+      0px 105.04032135009766px 84.03225708007812px rgba(0, 0, 0, 0.07)
+    )
+    drop-shadow(
+      0px 15.756048202514648px 21.00806427001953px rgba(214, 50, 110, 0.3)
+    );
 }
 .welcome {
   grid-area: welcome;
+  padding: 0.7rem;
+}
+
+.welcome .container {
+  width: 100%;
+  background-color: #d9c1bd;
+  border-radius: 2rem;
 }
 
 .profile {
   grid-area: profile;
-
   align-items: center;
   flex-direction: column;
   padding: 1.5rem 3rem;
+  position: relative;
+  overflow: hidden;
+  background-image: url(./assets/dot.svg);
 }
 
-.profile .profile-avatar {
-  width: 14rem;
+.profile::before {
+  content: '';
+  width: 10rem;
   height: 14rem;
-  background-color: var(--neutral-800);
+  position: absolute;
+  left: -5rem;
+  top: 2rem;
+  opacity: 0.5;
+}
+
+.profile .profile-avatar img {
+  width: 20rem;
+  height: 20rem;
+  /* background-color: var(--neutral-800); */
   border-radius: 50%;
-  background: url(./assets/me.png) no-repeat center/cover;
+  /* background: url(./assets/me.png) no-repeat center/cover; */
 }
 .profile .profile-name h2 {
   font-size: 2.8rem;
@@ -137,7 +176,7 @@ li {
   letter-spacing: -0.5px;
 }
 .profile .profile-about p {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   color: var(--neutral-400);
   padding-top: 2rem;
   font-weight: 300;
@@ -145,7 +184,7 @@ li {
 
 .resume {
   grid-area: resume;
-  background-color: #f4edc3;
+  background-color: #fcffa6;
   position: relative;
   overflow: hidden;
 }
@@ -195,7 +234,8 @@ li {
   width: 100%;
   height: 100%;
   grid-area: hello;
-  background-image: url(./assets/[WWDC\ 2023]-[Apple\ Watch]-[watchOS\ 10]_cleanup\ 1.png);
+
+  /* background-image: url(./assets/topgraphic.svg); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -205,31 +245,30 @@ li {
   overflow: hidden;
 }
 
-/* .hello video {
-  position: absolute;
-  top: 0;
-  left: 0;
+.hello-message {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  opacity: 0.1;
-} */
-
+  align-items: center;
+  justify-content: center;
+}
 .hello-message h1 {
   font-size: 7rem;
   text-align: center;
   font-style: normal;
   font-weight: 700;
   line-height: 0.9;
-  color: var(--neutral);
-  z-index: 100;
+  color: var(--neutral-600);
+
+  transform-style: preserve-3d;
+  perspective: 1000px;
+  transform: translateZ(20px);
 }
 
 .projects {
   grid-area: projects;
 
   justify-content: center;
-  background-image: url(./assets/Base.svg);
+  background-image: url(./assets/grids.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -308,7 +347,7 @@ li {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(159deg, #ddf6ff 25.32%, #ffeaef 68.56%);
+  background: linear-gradient(134deg, #f5f5f7 49.51%, #bee7f4 100%);
 }
 
 .mail span {
@@ -349,9 +388,14 @@ li {
   backdrop-filter: blur(10px);
 }
 
-/* .button-copy:hover {
-  background-color: rgba(45, 53, 60, 0.2);
-  color: var(--neutral-400);
+.button-copy:hover {
+  background-color: rgba(45, 53, 60, 0.1);
+  backdrop-filter: blur(5px);
+}
+
+/* .button-copy:hover > :not(:hover) {
+  opacity: 0.4;
+  transform: scale(0.9);
 } */
 
 .button-copy i {
@@ -737,8 +781,8 @@ input {
   }
 
   .profile .profile-avatar {
-    width: 12rem;
-    height: 12rem;
+    /* width: 12rem;
+    height: 12rem; */
   }
 
   .contact .frame {
