--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-  background-color: var(--neutral);
+  background-color: var(--neutral-100);
   transition: background 0.3s ease;
 }
 
@@ -14,6 +14,8 @@ body {
   font-family: 'SF Pro Display', sans-serif;
   src: url(./assets/SF-Pro-Display-Bold.otf) format('opentype');
   src: url(./assets/SF-Pro-Display-Regular.otf) format('opentype');
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 :root {
   font-family: 'SF Pro Display', sans-serif;
@@ -59,8 +61,9 @@ li {
 }
 
 .card {
-  background-color: var(--neutral-100);
+  background-color: var(--neutral);
   border-radius: var(--border-radius);
+  box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
 }
 
 .title {
@@ -77,7 +80,7 @@ li {
   margin: 0 auto;
   display: grid;
   place-content: center;
-  gap: 0.8rem;
+  gap: 1rem;
   grid-template-columns: 0.5fr 1fr 0.5fr 2.2fr 0.6fr 0.9fr;
   grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
   grid-auto-flow: row;
@@ -102,26 +105,6 @@ li {
 }
 .brand-logo img {
   height: 7.5rem;
-
-  filter: drop-shadow(
-      0px 2.9067351818084717px 2.325388193130493px rgba(0, 0, 0, 0.02)
-    )
-    drop-shadow(0px 6.985288619995117px 5.588231086730957px rgba(0, 0, 0, 0.03))
-    drop-shadow(
-      0px 13.152678489685059px 10.52214241027832px rgba(0, 0, 0, 0.04)
-    )
-    drop-shadow(
-      0px 23.46213150024414px 18.769704818725586px rgba(0, 0, 0, 0.04)
-    )
-    drop-shadow(
-      0px 43.883338928222656px 35.10667037963867px rgba(0, 0, 0, 0.05)
-    )
-    drop-shadow(
-      0px 105.04032135009766px 84.03225708007812px rgba(0, 0, 0, 0.07)
-    )
-    drop-shadow(
-      0px 15.756048202514648px 21.00806427001953px rgba(214, 50, 110, 0.3)
-    );
 }
 .welcome {
   grid-area: welcome;
@@ -130,7 +113,7 @@ li {
 
 .welcome .container {
   width: 100%;
-  background-color: #d9c1bd;
+
   border-radius: 2rem;
 }
 
@@ -138,7 +121,7 @@ li {
   grid-area: profile;
   align-items: center;
   flex-direction: column;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 2rem;
   position: relative;
   overflow: hidden;
   background-image: url(./assets/dot.svg);
@@ -155,14 +138,26 @@ li {
 }
 
 .profile .profile-avatar img {
-  width: 20rem;
-  height: 20rem;
-  /* background-color: var(--neutral-800); */
+  width: 13rem;
+  position: relative;
   border-radius: 50%;
   /* background: url(./assets/me.png) no-repeat center/cover; */
 }
+
+.profile .profile-avatar::before {
+  content: '';
+  width: 18rem;
+  height: 18rem;
+  border-radius: 50%;
+  background-color: #dc7599;
+  opacity: 0.4;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .profile .profile-name h2 {
-  font-size: 2.8rem;
+  font-size: 3rem;
   padding-top: 1.2rem;
   font-weight: 700;
   color: var(--neutral-600);
@@ -184,7 +179,9 @@ li {
 
 .resume {
   grid-area: resume;
-  background-color: #fcffa6;
+  /* background-color: #f7ef99; */
+
+  background: linear-gradient(51deg, #feef88 18.21%, #fdf751 100%);
   position: relative;
   overflow: hidden;
 }
@@ -192,7 +189,7 @@ li {
 .resume a {
   font-size: 2.5rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: normal;
   letter-spacing: -0.75px;
 }
@@ -227,22 +224,12 @@ li {
   }
 }
 
-.resume .fill:hover {
-}
-
 .hello {
   width: 100%;
   height: 100%;
   grid-area: hello;
-
-  /* background-image: url(./assets/topgraphic.svg); */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   align-items: center;
   justify-content: center;
-  position: relative;
-  overflow: hidden;
 }
 
 .hello-message {
@@ -250,7 +237,12 @@ li {
   height: 100%;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+  transform: translateZ(20px);
 }
+
 .hello-message h1 {
   font-size: 7rem;
   text-align: center;
@@ -258,10 +250,29 @@ li {
   font-weight: 700;
   line-height: 0.9;
   color: var(--neutral-600);
+  position: absolute;
+  background: linear-gradient(41deg, #ff3d7b 0%, #ffd876 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 100;
 
   transform-style: preserve-3d;
   perspective: 1000px;
   transform: translateZ(20px);
+}
+
+.hello-message h1::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(41deg, #ff3d7b 0%, #ffd876 100%);
+  filter: blur(20px);
+  transform: translateY(10px) scale(1);
+  opacity: 0.3;
 }
 
 .projects {
@@ -272,26 +283,28 @@ li {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  position: relative;
+  width: 100%;
+
+  overflow: hidden;
 }
 
 .projects span {
-  font-size: 2rem;
-  color: var(--neutral-500);
-  font-weight: 600;
+  font-size: 3rem;
+  color: var(--neutral-700);
+  font-weight: 700;
 }
 
 .stacks {
   grid-area: stacks;
-  gap: 2rem;
+  gap: 1.5rem;
   align-items: center;
   flex-direction: column;
-  position: relative;
-  padding-top: 2rem;
-  overflow: hidden;
 }
 
 .stacks .title {
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 700;
 
   color: var(--neutral-600);
@@ -306,7 +319,7 @@ li {
 }
 
 .stacks .ico {
-  background-color: var(--neutral);
+  background-color: var(--neutral-100);
   width: 5.6rem;
   height: 5.6rem;
   align-items: center;
@@ -324,20 +337,17 @@ li {
   fill: var(--neutral);
 }
 .stacks .description {
-  width: 85%;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  position: relative;
-  gap: 1rem;
 }
 
 .stacks .description p {
   color: var(--neutral-400);
   font-size: 1.2rem;
   font-weight: 400;
-  background: rgba(45, 53, 60, 0.1);
-  border-radius: 0.9rem;
-  padding: 0.8rem;
+  background: #f5f5f7;
+  border-radius: 2rem;
+  padding: 1.3rem;
 }
 
 .mail {
@@ -347,7 +357,6 @@ li {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(134deg, #f5f5f7 49.51%, #bee7f4 100%);
 }
 
 .mail span {
@@ -356,7 +365,7 @@ li {
   color: var(--neutral-600);
 }
 
-.mail img {
+.mail .img {
   /* width: 100%; */
   position: relative;
   top: 30%;
@@ -372,8 +381,8 @@ li {
   height: 5rem;
   display: flex;
   border: 1px solid var(--neutral-200);
-  background: rgba(255, 255, 255, 0.1);
-  bottom: -1.5rem;
+  background: rgba(255, 255, 255, 0.2);
+  bottom: -1.8rem;
   border-radius: 1.5rem;
   align-items: center;
   justify-content: center;
@@ -386,11 +395,14 @@ li {
   cursor: pointer;
   gap: 0.6rem;
   backdrop-filter: blur(10px);
+  transition: 1s ease;
+}
+
+.button-copy.copied {
+  background-color: #4cd864;
 }
 
 .button-copy:hover {
-  background-color: rgba(45, 53, 60, 0.1);
-  backdrop-filter: blur(5px);
 }
 
 /* .button-copy:hover > :not(:hover) {
@@ -408,20 +420,6 @@ li {
   justify-content: center;
   align-items: center;
 }
-.checkmark-svg {
-  stroke: white;
-  width: 2rem;
-  stroke-dashoffset: 40.84104919433594;
-  stroke-dasharray: 40.84104919433594;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 4px;
-  animation: checkmark 800ms forwards;
-  align-items: center;
-  position: absolute;
-  bottom: 2rem;
-  display: none;
-}
 
 @keyframes checkmark {
   100% {
@@ -437,7 +435,7 @@ li {
   overflow: hidden;
   transition: all 1s ease;
   border-radius: 20px;
-  background: #58a9ee;
+  background: #8dd5ff;
   position: relative;
 }
 
@@ -457,7 +455,7 @@ input {
   display: none;
   position: absolute;
   top: 7rem;
-  animation: moonshine 1s ease-out;
+  animation: moonshine 1s forwards;
   transition: all 1s ease;
 }
 
@@ -465,7 +463,7 @@ input {
   display: block;
   position: absolute;
   top: 6.8rem;
-  animation: sunrise 1s ease-out;
+  animation: sunrise 1s forwards;
 }
 
 @keyframes sunrise {
@@ -541,7 +539,7 @@ input {
   position: absolute;
   width: 5rem;
   height: 3rem;
-  background: var(--neutral-200);
+  background: #feef88;
   border-radius: 5rem;
   cursor: pointer;
   transition: all 0.4s;
@@ -570,7 +568,7 @@ input {
 }
 
 .toggle-btn.active {
-  background: #6cd86b;
+  background: #c9c9c9;
   transition: all 0.4s;
 }
 
@@ -776,15 +774,6 @@ input {
     padding-inline: 10rem;
   }
 
-  .profile {
-    padding: 1rem 4rem;
-  }
-
-  .profile .profile-avatar {
-    /* width: 12rem;
-    height: 12rem; */
-  }
-
   .contact .frame {
     position: relative;
     top: 0.1rem;
@@ -871,12 +860,14 @@ body.dark {
   background-color: var(--neutral-800);
 }
 
+.dark .mail,
+.dark .hello,
 .dark .stacks,
 .dark .projects,
 .dark .brand,
 .dark .welcome,
 .dark .profile {
-  background-color: var(--neutral-700);
+  background-color: #1d1d1f;
 }
 
 .dark .resume {
@@ -900,7 +891,28 @@ body.dark {
   background-color: var(--neutral-800);
 }
 
+.dark .projects span {
+  color: var(--neutral-100);
+}
+
 .dark .stacks .title {
   bottom: 0;
   color: var(--neutral-100);
 }
+
+.dark .mail .button-copy {
+  border: 1px solid var(--neutral-500);
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+}
+
+/*
+
+
+transform 1s cubic-bezier(0.39, 0.575, 0.565, 1), 
+-webkit-transform 1s cubic-bezier(0.39, 0.575, 0.565, 1)
+
+
+radial-gradient(ellipse at 5% 5%, #fec833 0%, rgba(254,200,51,0) 75%),radial-gradient(ellipse at 95% 5%, #fdc1a7 0%, rgba(253,193,167,0) 75%),radial-gradient(ellipse at 95% 95%, #e4699a 15%, rgba(228,105,154,0) 75%),radial-gradient(ellipse at 5% 95%, #eb5551 30%, rgba(235,85,81,0) 75%)
+
+*/
