--- a/style.css
+++ b/style.css
@@ -277,23 +277,27 @@ li {
 
 .projects {
   grid-area: projects;
-
   justify-content: center;
-  background-image: url(./assets/grids.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
   position: relative;
-  width: 100%;
-
   overflow: hidden;
+  position: relative;
+}
+
+.projects img {
+  width: 100%;
+  height: 100%;
+  /* background-image: url(./assets/grids.svg); */
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  position: absolute;
 }
 
 .projects span {
   font-size: 3rem;
   color: var(--neutral-700);
   font-weight: 700;
+  position: absolute;
 }
 
 .stacks {
