--- a/style.css
+++ b/style.css
@@ -280,17 +280,11 @@ li {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  position: relative;
-}
 
-.projects img {
-  width: 100%;
-  height: 100%;
-  /* background-image: url(./assets/grids.svg); */
-  /* background-position: center;
+  background-image: url(./assets/grids.svg);
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; */
-  position: absolute;
+  background-size: cover;
 }
 
 .projects span {
