--- a/style.css
+++ b/style.css
@@ -10,6 +10,65 @@ body {
   transition: background 0.3s ease;
 }
 
+.loader_bg{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 4rem;
+
+  position: fixed;
+  z-index: 9999;
+  background-color: #FFF;
+  width: 100%;
+  height: 100%;
+}
+.animation{
+}
+.loader{
+  display: flex;
+  align-items: center;
+
+  position: relative ;
+  height: 1rem;
+  width: 250px;
+  background-color: #888888;
+  border: 1px solid #888888;
+  border-radius: 1rem;
+
+  /* left: 50%;
+  transform: translateX(-50%); */
+}
+
+.loader .progress-bar{
+  margin-inline: .1rem;
+  /* position: absolute; */
+  background-color: #fff;
+  width: 0px;
+  height: .6rem;
+  border-radius: 1rem;
+  animation: progress 4.5s forwards linear ;
+}
+ 
+
+@keyframes progress{
+  0%{
+    width: 0%;
+  }
+  25%{
+    width: 50%;
+  }
+  50%{
+    width: 75%;
+  }
+  75%{
+    width: 85%;
+  }
+  100%{
+    width: 100%;
+  }
+}
+
 @font-face {
   font-family: 'SF Pro Display', sans-serif;
   src: url(./assets/SF-Pro-Display-Bold.otf) format('opentype');
@@ -297,11 +356,11 @@ li {
 .container {
   max-width: 1120px;
   width: 100%;
-  padding: 40px 0;
+  padding: 50px 0;
 }
 
 .slide-container {
-  margin: 0 60px;
+  margin: 0 35px;
   overflow: hidden;
 }
 
@@ -318,14 +377,13 @@ li {
 .card-slide .image-box img {
   width: 100%;
   height: 100%;
-  border-radius: 8px 8px 0 0;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .card-slide .profile-details {
   display: flex;
-  align-items: center;
-  column-gap: 12px;
-  padding: 15px;
+  column-gap: 3rem;
+  padding: 1rem;
 }
 
 .card-slide .profile-details img {
@@ -339,23 +397,49 @@ li {
   font-weight: 500;
 }
 
+.stack-details .stack-title,
+.preview-title {
+  font-size: 15px;
+  font-weight: 500;
+}
+
 .profile-details .job {
   font-size: 12px;
   font-weight: 400;
   color: #4d4d4d;
 }
 
+.stack-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.stack-details .stack-icons,
+.preview-icons {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.stack-details .stack-icons img,
+.project-preview .preview-icons img {
+  width: 2rem;
+}
+
+.project-preview .preview-icons img {
+  cursor: pointer;
+}
+
 .swiper-navBtn {
   color: #000;
-  height: 40px;
-  width: 40px;
-  background: #fff;
+  height: 30px;
+  width: 30px;
+  background: var(--neutral-200);
   border-radius: 50%;
 }
 
 .swiper-navBtn::before,
 .swiper-navBtn::after {
-  font-size: 18px;
+  font-size: 12px;
 }
 
 .swiper-pagination-bullet {
@@ -969,13 +1053,14 @@ body.dark {
   color: #fff;
 }
 
+.dark .button-copy.copied {
+  background-color: #4cd864;
+}
+
 /*
 
 
 transform 1s cubic-bezier(0.39, 0.575, 0.565, 1), 
 -webkit-transform 1s cubic-bezier(0.39, 0.575, 0.565, 1)
 
-
-radial-gradient(ellipse at 5% 5%, #fec833 0%, rgba(254,200,51,0) 75%),radial-gradient(ellipse at 95% 5%, #fdc1a7 0%, rgba(253,193,167,0) 75%),radial-gradient(ellipse at 95% 95%, #e4699a 15%, rgba(228,105,154,0) 75%),radial-gradient(ellipse at 5% 95%, #eb5551 30%, rgba(235,85,81,0) 75%)
-
-*/
+s
